--- a/README.asciidoc
+++ b/README.asciidoc
@@ -7,3 +7,24 @@ http://github.com/schacon/git-scribe
 
 Instructions on how to install the tool and use it for things like editing this book,
 submitting errata and providing translations can be found at that site.
+
+Depenencies to satisfy git scribe check:
+========================================
+
+On OSX:
+
+  brew install asciidoc fop source-highlight
+
+Then download and install KindleGen:
+
+  http://s3.amazonaws.com/kindlegen/KindleGen_Mac_i386_v1.2.zip
+
+Unzip it somewhere and make sure the `kindlegen` binary is on your path (I use ~/bin):
+
+  mkdir /usr/local/KindleGen
+  cd /usr/local/KindleGen
+  curl -O http://s3.amazonaws.com/kindlegen/KindleGen_Mac_i386_v1.2.zip
+  unzip KindleGen_Mac_i386_v1.2.zip
+  cd KindleGen_Mac_i386_v1.KindleGen_Mac_i386_v1
+  chmod u+x kindlegen
+  ln -s /usr/local/KindleGen/kindlegen ~/bin/kindlegen
