--- a/README.asciidoc
+++ b/README.asciidoc
@@ -8,7 +8,7 @@ http://github.com/schacon/git-scribe
 Instructions on how to install the tool and use it for things like editing this book,
 submitting errata and providing translations can be found at that site.
 
-Depenencies to satisfy git scribe check:
+Dependencies to satisfy git scribe check:
 ========================================
 
 On OSX:
