--- a/README.asciidoc
+++ b/README.asciidoc
@@ -17,11 +17,15 @@ Instructions on how to install the tool and use it for things like editing this 
 submitting errata and providing translations can be found at that site.
 
 Dependencies to satisfy git scribe check:
-========================================
+=========================================
 
 On OSX:
 
-  brew install asciidoc fop source-highlight
+  brew install asciidoc fop source-highlight docbook
+
+Make sure you register docbook after installation:
+
+  sudo docbook-register
 
 Then download and install KindleGen:
 
