--- a/README.asciidoc
+++ b/README.asciidoc
@@ -39,3 +39,13 @@ Unzip it somewhere and make sure the `kindlegen` binary is on your path (I use ~
   unzip KindleGen_Mac_i386_v1.2.zip
   chmod u+x kindlegen
   ln -s /usr/local/KindleGen/kindlegen ~/bin/kindlegen
+
+On Ubuntu:
+
+   sudo aptitude install asciidoc fop source-highlight docbook
+
+Install KindleGen into ~/bin; you can put it anywhere in your PATH you like:
+
+   wget -P /tmp/ http://s3.amazonaws.com/kindlegen/kindlegen_linux_2.6_i386_v1.2.tar.gz
+   tar -C /tmp/ -xzf /tmp/kindlegen_linux_2.6_i386_v1.2.tar.gz
+   mv /tmp/kindlegen ~/bin/
