--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,13 +1,11 @@
-Welcome!
-========
+= Welcome!
 
 Welcome to the thoughtbot Backbone.js on Rails eBook.
 
 The quickest way to start reading right now is to clone the repository and
 look at the release/index.html file.
 
-Writing This Book
-=================
+== Getting started
 
 This book is written using using the git-scribe toolchain, which can be found at:
 
@@ -16,8 +14,13 @@ http://github.com/schacon/git-scribe
 Instructions on how to install the tool and use it for things like editing this book,
 submitting errata and providing translations can be found at that site.
 
-Dependencies to satisfy git scribe check:
-=========================================
+=== Dependencies
+
+Install dependencies with Bundler:
+
+  bundle install
+
+Now install the git-scribe dependencies:
 
 On OSX:
 
@@ -39,3 +42,23 @@ Unzip it somewhere and make sure the `kindlegen` binary is on your path (I use ~
   unzip KindleGen_Mac_i386_v1.2.zip
   chmod u+x kindlegen
   ln -s /usr/local/KindleGen/kindlegen ~/bin/kindlegen
+
+Check to see that everything is working together:
+
+  git scribe check
+
+== Writing
+
+Run +guard+ to watch the +book/+ directory and automatically rebuild the SITE target when anything changes:
+
+  $ guard
+  Guard is now watching at '/Users/jason/dev/backbone-js-on-rails'
+  git-scribe is waiting for book changes...
+  git-scribe is generating a new SITE from the book...
+  git-scribe successfully generated a new SITE.
+
+You can now see the site in +output/index.html+.
+
+== Releasing
+
+Run +rake release+ to build all output targets, commit to git, and push up to GitHub.
