--- a/README.asciidoc
+++ b/README.asciidoc
@@ -30,24 +30,12 @@ Now install the git-scribe dependencies:
 
 ==== Installing git-scribe dependencies On OSX
 
+  brew install https://raw.github.com/adamv/homebrew-alt/master/non-free/kindlegen.rb
   brew install asciidoc fop source-highlight docbook
 
 Make sure you register docbook after installation:
 
   sudo docbook-register
-
-Then download and install KindleGen:
-
-  http://s3.amazonaws.com/kindlegen/KindleGen_Mac_i386_v1.2.zip
-
-Unzip it somewhere and make sure the `kindlegen` binary is on your path (I use ~/bin):
-
-  mkdir /usr/local/KindleGen
-  cd /usr/local/KindleGen
-  curl -O http://s3.amazonaws.com/kindlegen/KindleGen_Mac_i386_v1.2.zip
-  unzip KindleGen_Mac_i386_v1.2.zip
-  chmod u+x kindlegen
-  ln -s /usr/local/KindleGen/kindlegen ~/bin/kindlegen
 
 ==== Installing git-scribe dependencies On Ubuntu
 
@@ -58,7 +46,6 @@ Install KindleGen into ~/bin; you can put it anywhere in your PATH you like:
    wget -P /tmp/ http://s3.amazonaws.com/kindlegen/kindlegen_linux_2.6_i386_v1.2.tar.gz
    tar -C /tmp/ -xzf /tmp/kindlegen_linux_2.6_i386_v1.2.tar.gz
    mv /tmp/kindlegen ~/bin/
-
 
 === Verifying the install
 
