--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,4 +1,4 @@
-== Get the latest release of the book
+= Get the latest release of the book
 
 The quickest way to start reading right now is to clone the repository and
 look at the release/index.html file.
@@ -10,7 +10,9 @@ on improving the formatting, you can read in other formats, too:
 * Single-page HTML: release/book.html
 * Mobi (Kindle): release/book.mobi
 
-== Getting started
+== Instructions for authors
+
+(Note: Readers of the book don't need to worry about the instructions below.)
 
 This book is written using using the git-scribe toolchain, which can be found at:
 
