--- a/example_app/README
+++ b/example_app/README
@@ -32,4 +32,6 @@ Or one at a time
 
     bundle exec rake cucumber
     bundle exec rake spec
-    bundle exec rake jasmine
+
+Browse to http://localhost:3000/jasmine (or your local server/jasmin) to run 
+the Jasmine specs
