--- a/example_app/README
+++ b/example_app/README
@@ -33,5 +33,5 @@ Or one at a time
     bundle exec rake cucumber
     bundle exec rake spec
 
-Browse to http://localhost:3000/jasmine (or your local server/jasmin) to run 
-the Jasmine specs
+Browse to http://localhost:3000/jasmine (or your local server/jasmine) to run 
+the Jasmine specs.
