--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,14 +1,18 @@
 == Get the latest release of the book
 
-The quickest way to start reading right now is to clone the repository and
-look at the release/index.html file.
+The quickest way to start reading right now is to view the PDF version here:
 
-HTML is the best-supported output format right now.  While we're still working
-on improving the formatting, you can read in other formats, too:
+https://github.com/thoughtbot/backbone-js-on-rails/raw/master/release/book.pdf
+
+The book is currently available in the following formats:
 
 * PDF: release/book.pdf
+* Multi-page HTML: release/index.html
 * Single-page HTML: release/book.html
 * Mobi (Kindle): release/book.mobi
+
+For HTML versions, clone the repository and look at the HTML so that images
+and other assets are properly loaded.
 
 == Instructions for authors
 
