Use upquote TeX package to fix source quoting issues
This also seems to much improve the copy/paste of leading whitespace in
code samples; might be due to updating tlmgr packages?

* https://github.com/jgm/pandoc/issues/638

--- a/templates/template.latex
+++ b/templates/template.latex
@@ -2,6 +2,7 @@
 \usepackage{amssymb,amsmath}
 \usepackage{ifxetex,ifluatex}
 \usepackage{fixltx2e} % provides \textsubscript
+\usepackage{upquote}
 \ifxetex
   \usepackage{fontspec,xltxtra,xunicode}
   \defaultfontfeatures{Mapping=tex-text,Scale=MatchLowercase}
