--- a/templates/template.latex
+++ b/templates/template.latex
@@ -2,6 +2,7 @@
 \usepackage{amssymb,amsmath}
 \usepackage{ifxetex,ifluatex}
 \usepackage{fixltx2e} % provides \textsubscript
+\usepackage[T1]{fontenc}
 \usepackage{upquote}
 \ifxetex
   \usepackage{fontspec,xltxtra,xunicode}
