--- a/templates/pdf.latex
+++ b/templates/pdf.latex
@@ -15,7 +15,7 @@ $if(sansfont)$
   \setsansfont{$sansfont$}
 $endif$
 $if(monofont)$
-  \setmonofont{$monofont$}
+  \setmonofont[Scale=0.8]{$monofont$}
 $endif$
 $if(mathfont)$
   \setmathfont{$mathfont$}
