--- a/templates/pdf.latex
+++ b/templates/pdf.latex
@@ -2,8 +2,6 @@
 \usepackage{amssymb,amsmath}
 \usepackage{ifxetex,ifluatex}
 \usepackage{fixltx2e} % provides \textsubscript
-\usepackage[T1]{fontenc}
-\usepackage{upquote}
 \ifxetex
   \usepackage{fontspec,xltxtra,xunicode}
   \defaultfontfeatures{Mapping=tex-text,Scale=MatchLowercase}
@@ -15,7 +13,7 @@ $if(sansfont)$
   \setsansfont{$sansfont$}
 $endif$
 $if(monofont)$
-  \setmonofont{$monofont$}
+  \setmonofont[Scale=0.8]{$monofont$}
 $endif$
 $if(mathfont)$
   \setmathfont{$mathfont$}
@@ -46,10 +44,6 @@ $endif$
 \fi
 $if(geometry)$
 \usepackage[$for(geometry)$$geometry$$sep$,$endfor$]{geometry}
-$else$
-% Not sure what the above geometry args do, but we want it for \newgeometry later
-% to inject a full-page PDF for the cover page.
-\usepackage{geometry}
 $endif$
 $if(natbib)$
 \usepackage{natbib}
@@ -89,7 +83,7 @@ $endif$
 $if(url)$
 \usepackage{url}
 $endif$
-
+$if(graphics)$
 \usepackage{graphicx}
 % We will generate all images so they have a width \maxwidth. This means
 % that they will get their normal width if they fit onto the page, but
@@ -100,7 +94,7 @@ $endif$
 \makeatother
 \let\Oldincludegraphics\includegraphics
 \renewcommand{\includegraphics}[1]{\Oldincludegraphics[width=\maxwidth]{#1}}
-
+$endif$
 \ifxetex
   \usepackage[setpagesize=false, % page size defined by xetex
               unicode=false, % unicode breaks when used with xetex
@@ -148,7 +142,6 @@ $for(header-includes)$
 $header-includes$
 $endfor$
 
-
 $if(title)$
 \title{$title$}
 $endif$
@@ -159,26 +152,40 @@ $if(date)$
 \date{$date$}
 $endif$
 
+% Remove "Chapter x" text from chapter titles
+\makeatletter
+\def\@makechapterhead#1{%
+  \vspace*{50\p@}%
+  {\parindent \z@ \raggedright \normalfont
+    \interlinepenalty\@M
+    \Huge \bfseries #1\par\nobreak
+    \vskip 40\p@
+  }}
+  \makeatother
+
+\usepackage{pdfpages}
+
 \begin{document}
-
-\newgeometry{top=0cm,bottom=0cm,left=0cm,right=0cm,nohead,nofoot}
-\begin{figure}
-\Oldincludegraphics[width=\textwidth,height=\textheight]{../book/images/cover.pdf}
-\end{figure}
-\restoregeometry
-
+\pagenumbering{roman}
+\frontmatter
+\includepdf[pages={1}]{images/cover.pdf}
 $if(title)$
 \maketitle
 $endif$
 
 $for(include-before)$
 $include-before$
-
 $endfor$
-$if(toc)$
-\tableofcontents
 
+$if(toc)$
+{
+\hypersetup{linkcolor=black}
+\setcounter{tocdepth}{1}
+\def\numberline#1{}
+\tableofcontents
+}
 $endif$
+
 $body$
 
 $if(natbib)$
