Update Ruby & Rails versions and dependencies
Update Rails, Capybara, jasmine, Factory Girl versions

The update to tasks_controller to explicitly remove the nil values in
the params hash is required to work around a regression in Rails:
https://github.com/rails/rails/issues/8832

--- a/example_app/README
+++ b/example_app/README
@@ -6,7 +6,8 @@ It's a Rails 3.2 app.
 Running the app
 ---------------
 
-Make sure you're running Ruby 1.9 (there's an .rvmrc) and then:
+Make sure you're running Ruby 1.9 (there's a .ruby-version file that should be
+read by rvm or rbenv) and then:
 
     bundle
     bundle exec rake db:create db:migrate
